--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 </head>
 <body>
 	<h1>Welcome To Git Tutorial</h1>
-	<a href='http://nepsdotin.github.io/git-tutorial/'>Click here</a>
+	<a href='http://nepsdotin.github.io/git-tutorial/site/'>Click here</a>
 </body>
 </html>
