added image credits

--- a/site/ref/index.html
+++ b/site/ref/index.html
@@ -238,7 +238,9 @@
 <p><a href="http://en.wikipedia.org/wiki/Junio_Hamano">http://en.wikipedia.org/wiki/Junio_Hamano</a></p>
 <p><a href="http://singhal.info">http://singhal.info</a></p>
 <h2 id="videos-by-creator-of-git-youtube">Videos By Creator of GIT ( YouTube )</h2>
-<p><a href="https://www.youtube.com/watch?v=4XpnKHJAok8">Tech Talk: Linus Torvalds on git</a></p>
+<p><a href="https://www.youtube.com/watch?v=4XpnKHJAok8">Tech Talk: Linus Torvalds on git</a>
+</p>
+<p>Images Courtesy - altasian.com
             </div>
           </div>
           <footer>
