--- a/site/ref/index.html
+++ b/site/ref/index.html
@@ -240,7 +240,7 @@
 <h2 id="videos-by-creator-of-git-youtube">Videos By Creator of GIT ( YouTube )</h2>
 <p><a href="https://www.youtube.com/watch?v=4XpnKHJAok8">Tech Talk: Linus Torvalds on git</a>
 </p>
-<p>Images Courtesy - altasian.com
+<p>Images Pi[Fli]cked @ altasian.com With Thanks.
             </div>
           </div>
           <footer>
